# cc-statusline-tui

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.es.md  README.ja.md  README.ko.md  README.md  README.pt.md  README.ru.md  README.zh.md  SECURITY.md  cli.js  config.js  generator.js  i18n.js  package-lock.json  package.json  postinstall.js  styles.js
.claude/agents/: cicd.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: testcases.md
docs/plans/: 2026-03-21-rust-rewrite-design.md  2026-03-21-rust-rewrite-plan.md
src/: cache.rs  config.rs  i18n.rs  install.rs  log.rs  main.rs  render.rs  styles.rs
src/wizard/: configure.rs  confirm.rs  helpers.rs  mod.rs  multiselect.rs  options.rs  presets.rs  preview.rs  select.rs  spinner.rs  step_progress.rs  terminal.rs
