[package]
name = "cc-statusline"
version = "2.0.7"
edition = "2021"
description = "Interactive CLI tool to configure Claude Code statusline"
license = "MIT"
repository = "https://github.com/LokiQ0713/cc-statusline"
authors = ["LokiQ0713"]
homepage = "https://github.com/LokiQ0713/cc-statusline"
keywords = ["cli", "statusline", "claude", "terminal", "tui"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
crossterm = "0.28"
ureq = { version = "2", features = ["json"] }
dirs = "6"
chrono = "0.4"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = "z"
lto = true
strip = true
panic = "abort"
